fix: fix visibility issues

--- a/async-race/src/index.css
+++ b/async-race/src/index.css
@@ -15,7 +15,7 @@ body {
 }
 
 .hidden {
-  opacity: 0;
+  visibility: hidden;
 }
 
 .generate-cars {
